--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,14 @@
                 >
                   View Resume
                 </a>
-              </span>
+                <a
+                rel="noreferrer"
+                target="_blank"
+                class="cta-btn cta-btn--resume mx-3"
+                href="assets/Transcript.pdf"
+                >
+                  Transcript
+                </a>
             </div>
           </div>
         </div>
