--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm a senior student in Systems and Bio-Medical Engineering Department at Cairo University, Egypt. I'm graduating this july.
-                I'm passionate about making contributing to software-biomedical industry and create new technologies to improve people health.
-                I'm Interested in Artifical Intellegence, Computer Vision, Image Processing and Software Development.
-
+                Iam a senior student in the Systems and Biomedical Engineering Department at Cairo University, Egypt, 
+                and I will be graduating in July 2023. I am passionate about making contributions to the software-biomedical industry and 
+                creating new technologies to improve people's health. I am particularly interested in Artificial Intelligence, 
+                Computer Vision, Image Processing, and Software Development.
               </p>
               <p class="about-wrapper__info-text">
                 My GPA is 3.6. You can find my resume below.
@@ -124,12 +124,10 @@
                 <h3 class="project-wrapper__text-title">Face Reminder - Graduation Project: In Progress </h3>
                 <div>
                   <p class="mb-4">
-                    With supervision of Uniparticle company
-                    Developed a mobile application to help people 
-                    with Prosopagnosia disease recognize familiar 
-                    faces of surrounding network using deep learning models.<br><br>
-                    The application connected to external camera within glasses 
-                    to help patient take pictures and send it to recognition app.
+                    With the supervision of Uniparticle company, 
+                    A mobile application was developed to assist individuals with Prosopagnosia in recognizing familiar faces within their social network.<br><br>
+                    The application utilizes deep learning models for facial recognition. It is designed to connect to an external camera integrated into glasses, 
+                    allowing patients to capture images and send them to the recognition app for analysis.
                     <div>
                     <p class="project-wrapper__text-tools mb-4">
                       RetinaFace detector, FaceNet, Triplet Loss, Django, React Native, Embedded.
@@ -187,18 +185,9 @@
                 <h3 class="project-wrapper__text-title">Image Processing in Frequency and Spatial domains</h3>
                 <div>
                   <p class="mb-4">
-                    Image Filtering using some image processing algorithms on both RGB and grayscale Images  with the ability to modify the kernel size.
-                    
-                    Filters implemented and applied:
-                    
-                    Histogram Equalisation,
-                     Mean Filter,
-                     Median Filter,
-                     Low Pass Filter,
-                     High Pass Filter,
-                     Gaussian Filter,
-                     Sobel Filter,
-                     and Laplacian Filter.
+                    The project focuses on implementing and applying several image processing algorithms on both RGB and grayscale images
+                    , with the flexibility to modify the kernel size. The following filters have been implemented and applied in this project: Histogram Equalization, 
+                    Mean Filter, Median Filter, Low Pass Filter, High Pass Filter, Gaussian Filter, Sobel Filter, and Laplacian 
                   </p>
                 </div>
                 <div>
@@ -246,9 +235,9 @@
                 <h3 class="project-wrapper__text-title">Face Shape Classification by Swin Transformer</h3>
                 <div>
                   <p class="mb-4">
-                    Desktop application to classify human face shape among 5 classes ( Oval, Square, Circle, Oblong, Heart )
-                      and extract facial landmarks. </br>
-                    The model is based on Shifted Window Transformer   ( Swin ) Architecture and pre-trained on Imagenet.
+                    The project involves developing a desktop application that classifies human face shapes into five different categories: Oval, Square, 
+                    Circle, Oblong, and Heart. Additionally, the application includes a feature to extract facial landmarks. <br><br>The 
+                    classification model is based on the Shifted Window Transformer (Swin) architecture and has been pre-trained on the Imagenet dataset
 
                   </p>
                 </div>
@@ -307,11 +296,13 @@
           <div class="row my-5 py-5" style="box-shadow: 10px 15px 15px  rgb(222, 239, 245);" id="DigitalFilter">
             <div class="col-lg-6 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Digital filter on vital signals</h3>
+                <h3 class="project-wrapper__text-title">Custom Digital Filter Website on vital signals</h3>
                 <div>
                   <p class="mb-4">
-                    A website to design a custom digital filter to
-                    apply it on different signal types (Signal Filtering).
+                    The project involves developing a website that 
+                    allows users to design custom digital filters for applying them to various signal types.<br><br>
+                    Using zeros-poles placement on z plane, Users can modify and visualize the filters' frequency response. 
+                    Real-time filtering of signals and phase correction using an all-pass filter library are also included.
                   </p>
                 </div>
                 <div>
@@ -359,9 +350,9 @@
                 <h3 class="project-wrapper__text-title">Music Equalizer and Virtual Instruments</h3>
                 <div>
                   <p class="mb-4">
-                    A desktop application created by PyQT can do signal processing on songs to emphasize certain instruments.
-                    and Can be used as a Music Player.
-                    In addition to, some built-in virtual musical instruments which you can play with and generate notes. 
+                    A desktop application using PyQT that performs signal processing on songs to emphasize specific instruments. 
+                    This application can also be used as a music player. 
+                    Additionally, it features built-in virtual musical instruments, allowing users to play and generate notes.
 
                   </p>
                 </div>
@@ -411,6 +402,8 @@
                   <p class="mb-4">
                     A Website to render volumes of body model with
                     options of clipping, cropping and iso-rendering.
+                    Users will be able to interact with the rendered body model and adjusting the view
+                    , allowing them to visualize the body model using isosurfaces."
                   </p>
                 </div>
                 <div>
@@ -459,7 +452,8 @@
                   <p class="mb-4">
                     A desktop application using python to monitor the vital signals like
                     ECG, EMG of patient in ICU of hospital. </br>
-                    In addition to, Multichannel viwer and Histogram Equalization
+                    The application includes a multichannel viewer, allowing healthcare professionals to visualize multiple signals simultaneously. 
+                    Additionally, the application features histogram equalization, enhancing the visual representation of the signals
                   </p>
                 </div>
                 <div>
@@ -506,8 +500,9 @@
                 <h3 class="project-wrapper__text-title">Facial Aging Model</h3>
                 <div>
                   <p class="mb-4">
-                    Deep learning model to find missing children by inserting their
-                    child faces and predict faces after years of aging.
+                    The project involves developing a deep learning model that aims to find missing children by inserting 
+                    their child faces and predicting their faces after years of aging. The model utilizes advanced 
+                    techniques in facial recognition and age progression to generate predictions of how a missing child may look as they age.
 
                   </p>
                 </div>
@@ -555,8 +550,9 @@
                 <h3 class="project-wrapper__text-title">Image "Flower" Classifier</h3>
                 <div>
                   <p class="mb-4">
-                    Developed python application to predict type
-                    of input flower image, trained by dayaset of different species of flowers using Pytorch
+                    The project involved developing a Python application that predicts the type of input flower images. 
+                    The application was trained using a dataset consisting of images of different species of flowers, 
+                    utilizing PyTorch as the deep learning framework
 
                   </p>
                 </div>
@@ -654,13 +650,9 @@
                 <h3 class="project-wrapper__text-title">Microcontroller Interface with LM-35</h3>
                 <div>
                   <p class="mb-4">
-                    STM32 microcontroller and LM35 Temperature sensor for temperature measurement
-                    implemented in Proteus Lm-35 Sensor with STM-32 by using ADC Driver Arm:
-                      GPIO,
-                      LCD,
-                      LM35 Temperature Sensor,
-                      ADC.
-                      Simulated .
+                    The project involved using an STM32 microcontroller and an LM35 temperature sensor for temperature measurement. 
+                    The implementation was done in Proteus, simulating 
+                    the LM35 sensor with STM32 by utilizing the ADC driver ARM, along with the GPIO, LCD, LM35 temperature sensor, and ADC components.
                   </p>
                 </div>
                 <div>
