--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Iam a senior student in the Systems and Biomedical Engineering Department at Cairo University, Egypt, 
-                and I will be graduating in July 2023. I am passionate about making contributions to the software-biomedical industry and 
+                and My graduation year is 2023. I am passionate about making contributions to the software-biomedical industry and 
                 creating new technologies to improve people's health. I am particularly interested in Artificial Intelligence, 
                 Computer Vision, Image Processing, and Software Development.
               </p>
@@ -121,7 +121,7 @@
           <div class="row my-5 py-5" style="box-shadow: 10px 15px 15px rgb(222, 239, 245);" id="FaceReminder">
             <div class="col-lg-6 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Face Reminder - Graduation Project: In Progress </h3>
+                <h3 class="project-wrapper__text-title">Face Reminder - Graduation Project</h3>
                 <div>
                   <p class="mb-4">
                     With the supervision of Uniparticle company, 
@@ -130,28 +130,36 @@
                     allowing patients to capture images and send them to the recognition app for analysis.
                     <div>
                     <p class="project-wrapper__text-tools mb-4">
-                      RetinaFace detector, FaceNet, Triplet Loss, Django, React Native, Embedded.
+                      RetinaFace detector, FaceNet, Triplet Loss, Django, React Native, Embedded, AWS EC2, Docker
                     </p>
                       
                     </div>
                   </p>
                 </div>
-                <span class="d-flex mt-3"></span>
+                <span class="d-flex mt-3">
                   <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="cta-btn cta-btn--hero"
-                    href="https://github.com/SuhailaAhmed/GP_Backend"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="assets/PresentationFinal.pdf"
                   >
-                    Source Code till now
+                    Presentation
                   </a>
                   <a
                     rel="noreferrer"
                     target="_blank"
                     class="cta-btn cta-btn--hero"
-                    href="assets/PresentationFinal.pdf"
+                    href="https://github.com/SuhailaAhmed/FaceReminder-Backend"
                   >
-                    Presentation till now
+                    Backend, Deep learning source Code
+                  </a>
+                  <a
+                    rel="noreferrer"
+                    target="_blank"
+                    class="cta-btn cta-btn--hero"
+                    href="https://github.com/SuhailaAhmed/FaceReminder-Frontend"
+                  >
+                    Frontend source code
                   </a>
                 </span>
               </div>
