--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Iam a senior student in the Systems and Biomedical Engineering Department at Cairo University, Egypt, 
+                Iam Biomedical engineer graduated from Systems and Biomedical Engineering Department at Cairo University, Egypt, 
                 and My graduation year is 2023. I am passionate about making contributions to the software-biomedical industry and 
                 creating new technologies to improve people's health. I am particularly interested in Artificial Intelligence, 
                 Computer Vision, Image Processing, and Software Development.
